syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/mustafayilmazdev/simplebank";

message TransferRequest{
    int64 from_account_id=1;
    int64 to_account_id=2;
    double amount=3;
}


message TransferResponse{
    int64 id= 1;
    int64  from_account_id= 2;
    int64  to_account_id= 3;
    double amount= 4;
    google.protobuf.Timestamp created_at=5;
}
